bzr-svn 0.3.2	UNRELEASED

  BUG FIXES

  * Fix compatibility with Bazaar 0.15.

  * Check for parent paths moving as well in LogWalker.find_latest_change(). 
    Fixes #84087.

bzr-svn 0.3.1	2007-01-31

  BUG FIXES
 
   *  Warning given when the version of python-subversion is not patched 
      is now fixed. (Wouter van Heyst)

  IMPROVEMENTS

   * A proper warning will now be printed if no sqlite implementation is 
     available.

   * Working tree copies will be disabled if the version of python-subversion 
     is too old.

bzr-svn 0.3.0	2007-01-16

  BUG FIXES

   * Use checksums for the path in case the file id is too long. (#77453)

   * Don't rely on listdir() kind results. Fixes imports of several 
     repositories. (#56647)

   * Fixed two problems with replaces that are nested.

   * Branch downgrades and dir upgrades are now recognized properly (#67010).

   * Supported branching schemes other that trunk-0.

   * Properly recognize discontinued branches. (#76823)

   * Switched to storing data in SQLite. (#74798)
   
   * Locks ra transports. (#76280)

   * Use built-in ra callbacks from Subversion. (#64816)

   * Implement SvnRaTransport.mkdir(). (#65138)

   * Avoid raising SubversionException's for non-subversion directories. 

   * Remove requirement for svn+ prefix. (#75751)

   * Don't consider SvnRepositories for writing for regular Bazaar 
     branches. (#77023)

   * Don't try to import files as branches.

   * Store file id map when committing to Subversion. (#54738)

   * Support spaces in filenames in working trees.

  IMPROVEMENTS

   * Implemented SvnRepository.all_revision_ids().

   * Proper ProgressBars.

   * Made `to_location' argument for svn-import optional.

   * Removed unused code.

   * Several attempts to reduce memory usage.

   * The LogWalker class is now a lot dumber.

   * Added --scheme and --all options to svn-import.

   * Implemented SvnRaTransport.list_dir().
