@@ -7,6 +7,8 @@ bzr-svn 0.3.2	UNRELEASED
   * Check for parent paths moving as well in LogWalker.find_latest_change(). 
     Fixes #84087.
 
+  * Handle unicode characters in commit messages. Fixes #85551.
+
 bzr-svn 0.3.1	2007-01-31
 
   BUG FIXES
